--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "nodejs"
   ],
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "start": "gulp nodemon",
+    "build": "gulp build",
+    "tslint": "gulp tslint"
   },
   "dependencies": {
     "boom": "^3.0.0",
