--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test": "gulp test",
     "start": "gulp nodemon",
     "build": "gulp build",
-    "tslint": "gulp tslint"
+    "tslint": "gulp tslint",
+    "postinstall": "npm run typings-install",
+    "typings-install": "typings install"
   },
   "dependencies": {
     "boom": "^3.0.0",
